--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis.ipynb
@@ -31,6 +31,41 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tdFFCCC_fIjV",
+        "colab_type": "text"
+      },
+      "source": [
+        "this is a test "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2JOl3OY1fRkQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b322fbb4-8ceb-4000-c6d0-e9f993fbb69d"
+      },
+      "source": [
+        "print('hello world')"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2CkckTc6-txA",
         "colab_type": "text"
       },
