--- a/module3-join-and-reshape-data/LS_DS_113_Join_and_Reshape_Data.ipynb
+++ b/module3-join-and-reshape-data/LS_DS_113_Join_and_Reshape_Data.ipynb
@@ -815,24 +815,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tbjIOcdds-IL",
+        "colab_type": "text"
+      },
+      "source": [
+        "The 'on' parameter indicates a specific column that is contained in both dataframes. We use it to look up and copy information from the two df's into a combined df."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "JQBwUUAoPAfE",
         "colab_type": "code",
-        "outputId": "228f631b-82ec-4bc6-c1e7-4e0b46fcf467",
+        "outputId": "86d2ca0e-54a4-4cf5-ca93-9253c956c30d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 225
         }
       },
       "source": [
         "# Now merge that with the named stocks.\n",
-        "full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='left')\n",
-        "full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='inner')\n",
-        "full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='right')\n",
+        "full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='outer')\n",
+        "# full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='left')\n",
+        "# full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='inner')\n",
+        "# full_stocks=pd.merge(named_stocks, wkhigh, on='Symbol', how='right')\n",
         "full_stocks"
       ],
-      "execution_count": 44,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,20 +890,27 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>GOOGL</td>\n",
+              "      <td>501.30</td>\n",
+              "      <td>Google</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
               "      <td>FB</td>\n",
               "      <td>51.45</td>\n",
               "      <td>Facebook</td>\n",
               "      <td>60.79</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>4</th>\n",
               "      <td>AMZN</td>\n",
               "      <td>1703.34</td>\n",
               "      <td>Amazon</td>\n",
               "      <td>2050.49</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
+              "      <th>5</th>\n",
               "      <td>NFLX</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -906,15 +924,63 @@
               "  Symbol  OpenPrice       Name  52wkHigh\n",
               "0   AAPL     217.51      Apple    233.47\n",
               "1   MSFT      96.54  Microsoft    110.11\n",
-              "2     FB      51.45   Facebook     60.79\n",
-              "3   AMZN    1703.34     Amazon   2050.49\n",
-              "4   NFLX        NaN        NaN    303.22"
+              "2  GOOGL     501.30     Google       NaN\n",
+              "3     FB      51.45   Facebook     60.79\n",
+              "4   AMZN    1703.34     Amazon   2050.49\n",
+              "5   NFLX        NaN        NaN    303.22"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fIF82OwztnQt",
+        "colab_type": "text"
+      },
+      "source": [
+        "The 'how' parameter indicates what the portion of the selected dataframes to keep after the merge takes place.  \n",
+        "https://www.shanelynn.ie/merge-join-dataframes-python-pandas-index-1/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V2phRPbbth7z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        },
+        "outputId": "8ec967ab-0014-40d5-bcb8-400d253fdf80"
+      },
+      "source": [
+        "# This is code to display a `.png` inside of a jupyter notebook.\n",
+        "from IPython.display import display, Image\n",
+        "url = 'https://shanelynnwebsite-mid9n9g1q9y8tt.netdna-ssl.com/wp-content/uploads/2017/03/join-types-merge-names.jpg'\n",
+        "example = Image(url=url, width=600)\n",
+        "display(example)"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<img src=\"https://shanelynnwebsite-mid9n9g1q9y8tt.netdna-ssl.com/wp-content/uploads/2017/03/join-types-merge-names.jpg\" width=\"600\"/>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Image object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
@@ -3533,6 +3599,8 @@
       },
       "source": [
         "# merge the two df's on the common key.\n",
+        "# the 'on' parameter indicates a specific column that is contained in both dataframes.\n",
+        "# we use it to look up and copy information from the two df's into a combined df.\n",
         "merged = pd.merge(orders_subset, order_products_subset, on='order_id', how='inner')\n",
         "merged"
       ],
