added a note about subplots

--- a/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture_Solutions.ipynb
+++ b/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture_Solutions.ipynb
@@ -1729,7 +1729,16 @@
     "\n",
     "The `plt.subplots()` object will act as a more automatic axis manager. It is somewhat more common than using `.figure()`\n",
     "\n",
-    "Basic use cases:"
+    "`plt.subplots()` is a function that returns a tuple containing a figure and axes object(s). Thus when using `fig, ax = plt.subplots()` you unpack this tuple into the variables fig and ax. Having fig is useful if you want to change figure-level attributes or save the figure as an image file later (e.g. with fig.savefig('yourfilename.png')). You certainly don't have to use the returned figure object but many people do use it later so it's common to see. Also, all axes objects (the objects that have plotting methods), have a parent figure object anyway, thus:\n",
+    "```\n",
+    "fig, ax = plt.subplots()\n",
+    "```\n",
+    "is more concise than this:\n",
+    "```\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "```\n",
+    "https://stackoverflow.com/questions/34162443/why-do-many-examples-use-fig-ax-plt-subplots-in-matplotlib-pyplot-python"
    ]
   },
   {
