added note about .plt and ax

--- a/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture.ipynb
+++ b/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture.ipynb
@@ -1567,8 +1567,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main idea in using the more formal Object Oriented method is to create figure objects and then just call methods or attributes off of that object. This approach is nicer when dealing with a canvas that has multiple plots on it. \n",
-    "\n",
+    "In Matplotlib, the figure (an instance of the class `plt.Figure`) can be thought of as a single container that contains all the objects representing axes, graphics, text, and labels. The axes (an instance of the class `plt.Axes`) is what we see above: a bounding box with ticks and labels, which will eventually contain the plot elements that make up our visualization. We'll commonly use the variable name `fig` to refer to a figure instance, and `ax` to refer to an axes instance or group of axes instances. Once we have created an axes, we can use the `ax.plot` function to plot some data.\n",
+    "https://jakevdp.github.io/PythonDataScienceHandbook/04.01-simple-line-plots.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**The `.figure()` method**  \n",
     "To begin we create a figure instance. Then we can add axes to that figure:"
    ]
