added note about cont vs cat

--- a/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture_Solutions.ipynb
+++ b/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture_Solutions.ipynb
@@ -17,10 +17,22 @@
     "\n",
     "**Objectives**\n",
     "\n",
-    "- What are continuous and discrete variables? Using pandas built-in plotting functionality.\n",
+    "- What are continuous and categorical variables? Using pandas built-in plotting functionality.\n",
     "- Learn about various types of `pandas` plots using `matplotlib`\n",
-    "- use `matplotlib` to visualize distributions and relationships with continuous and discrete variables\n",
+    "- use `matplotlib` to visualize distributions and relationships with continuous and categorical variables\n",
     "- imitate a real-world example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What are categorical, discrete, and continuous variables?**  \n",
+    "\n",
+    "* Categorical variables contain a finite number of categories or distinct groups. Categorical data might not have a logical order. For example, categorical predictors include gender, material type, and payment method.  \n",
+    "* Discrete variables are numeric variables that have a countable number of values between any two values. A discrete variable is always numeric. For example, the number of customer complaints or the number of flaws or defects.  \n",
+    "* Continuous variables are numeric variables that have an infinite number of values between any two values. A continuous variable can be numeric or date/time. For example, the length of a part or the date and time a payment is received.  \n",
+    "[Source](https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/supporting-topics/basics/what-are-categorical-discrete-and-continuous-variables/)"
    ]
   },
   {
@@ -141,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Continuous vs. Discrete variables**"
+    "**Continuous vs. categorical variables**"
    ]
   },
   {
@@ -371,7 +383,7 @@
     }
    ],
    "source": [
-    "# cabin class is a discrete variable\n",
+    "# cabin class is a categorical variable\n",
     "# it can be displayed using either number or string values.\n",
     "df['cabin_class'] = df['Pclass'].map({1:'first', 2: 'second', 3:'third'})\n",
     "df.head()"
@@ -465,7 +477,7 @@
     }
    ],
    "source": [
-    "# A continuous variable can be converted to a discrete var using binning.\n",
+    "# A continuous variable can be converted to a categorical var using binning.\n",
     "farebins=[0,8,15,33,512]\n",
     "farelabels=['low', 'medium', 'high','vhigh']\n",
     "df['fare_groups']= pd.cut(df['Fare'], bins=farebins, labels=farelabels)\n",
@@ -557,7 +569,7 @@
     }
    ],
    "source": [
-    "# Stacked Histogram of continuous variable, broken out by discrete variable\n",
+    "# Stacked Histogram of continuous variable, broken out by categorical variable\n",
     "df[df['Pclass']==1]['Age'].plot(kind='hist', bins=25, figsize=(16,4), alpha=0.5)\n",
     "df[df['Pclass']==2]['Age'].plot(kind='hist', bins=25, figsize=(16,4), alpha=0.5)\n",
     "df[df['Pclass']==3]['Age'].plot(kind='hist', bins=25, figsize=(16,4), alpha=0.5);"
@@ -595,7 +607,7 @@
     "id": "3ibIk4TnDWu9"
    },
    "source": [
-    "**Display a single discrete variable**"
+    "**Display a single categorical variable**"
    ]
   },
   {
@@ -665,7 +677,7 @@
     "id": "DqC3QB5ODWvE"
    },
    "source": [
-    "**Compare two discrete variables**"
+    "**Compare two categorical variables**"
    ]
   },
   {
@@ -745,7 +757,7 @@
     }
    ],
    "source": [
-    "# Compare two discrete variables using crosstab\n",
+    "# Compare two categorical variables using crosstab\n",
     "cab_death = pd.crosstab(df['cabin_class'],df['Survived'])\n",
     "cab_death"
    ]
@@ -882,7 +894,7 @@
     }
    ],
    "source": [
-    "# make a stacked bar chart, for easy comparison of two discrete variables.\n",
+    "# make a stacked bar chart, for easy comparison of two categorical variables.\n",
     "cab_death1.plot(kind='bar', stacked=True, color=['orange', 'gray']);"
    ]
   },
@@ -995,7 +1007,7 @@
     }
    ],
    "source": [
-    "# A paired barchart for comparison of two discrete variables. Note the use of 'barh'.\n",
+    "# A paired barchart for comparison of two categorical variables. Note the use of 'barh'.\n",
     "cab_death2.plot(kind='barh', color=['purple', 'lightgreen'], figsize=(10,4));"
    ]
   },
@@ -1006,7 +1018,7 @@
     "id": "pzOHGieGDWvt"
    },
    "source": [
-    "**Compare a discrete and continuous variable**"
+    "**Compare a categorical and continuous variable**"
    ]
   },
   {
@@ -1067,7 +1079,7 @@
     }
    ],
    "source": [
-    "# Now explore that continuous variable broken out by a categorical (i.e., discrete) variable.\n",
+    "# Now explore that continuous variable broken out by a categorical (i.e., categorical) variable.\n",
     "cab_age = df.groupby('cabin_class')['Age'].mean()\n",
     "cab_age"
    ]
@@ -1194,7 +1206,7 @@
     }
    ],
    "source": [
-    "# Three variables: age, fare, and cabin class (color can be either continuous or discrete here).\n",
+    "# Three variables: age, fare, and cabin class (color can be either continuous or categorical here).\n",
     "df.plot(kind = 'scatter', x='Fare', y='Age', c='Pclass', colormap='plasma', figsize=(15,4));"
    ]
   },
@@ -1767,7 +1779,7 @@
    ],
    "source": [
     "# Use similar to plt.figure() except use tuple unpacking to grab fig and axes\n",
-    "fig, axes = plt.subplots(1,1) # The default is `(1, 1)` so you don't actually have to specify this.\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=1) # The default is `(1, 1)` so you don't actually have to specify this.\n",
     "\n",
     "# Now use the axes object to add stuff to plot\n",
     "axes.plot(x, y, 'darkred')\n",
