--- a/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture.ipynb
+++ b/module4-make-explanatory-visualizations/LS_DS_114_Make_Explanatory_Visualizations_Lecture.ipynb
@@ -17,10 +17,22 @@
     "\n",
     "**Objectives**\n",
     "\n",
-    "- What are continuous and discrete variables? Using pandas built-in plotting functionality.\n",
+    "- What are continuous and categorical variables? Using pandas built-in plotting functionality.\n",
     "- Learn about various types of `pandas` plots using `matplotlib`\n",
-    "- use `matplotlib` to visualize distributions and relationships with continuous and discrete variables\n",
+    "- use `matplotlib` to visualize distributions and relationships with continuous and categorical variables\n",
     "- imitate a real-world example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What are categorical, discrete, and continuous variables?**  \n",
+    "\n",
+    "* Categorical variables contain a finite number of categories or distinct groups. Categorical data might not have a logical order. For example, categorical predictors include gender, material type, and payment method.  \n",
+    "* Discrete variables are numeric variables that have a countable number of values between any two values. A discrete variable is always numeric. For example, the number of customer complaints or the number of flaws or defects.  \n",
+    "* Continuous variables are numeric variables that have an infinite number of values between any two values. A continuous variable can be numeric or date/time. For example, the length of a part or the date and time a payment is received.  \n",
+    "[Source](https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/supporting-topics/basics/what-are-categorical-discrete-and-continuous-variables/)"
    ]
   },
   {
@@ -136,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Continuous vs. Discrete variables**"
+    "**Continuous vs. categorical variables**"
    ]
   },
   {
@@ -364,7 +376,7 @@
     }
    ],
    "source": [
-    "# cabin class is a discrete variable\n",
+    "# cabin class is a categorical variable\n",
     "# it can be displayed using either number or string values.\n"
    ]
   },
@@ -453,7 +465,7 @@
     }
    ],
    "source": [
-    "# A continuous variable can be converted to a discrete var using binning.\n"
+    "# A continuous variable can be converted to a categorical var using binning.\n"
    ]
   },
   {
@@ -537,7 +549,7 @@
     }
    ],
    "source": [
-    "# Stacked Histogram of continuous variable, broken out by discrete variable\n"
+    "# Stacked Histogram of continuous variable, broken out by categorical variable\n"
    ]
   },
   {
@@ -569,7 +581,7 @@
     "id": "3ibIk4TnDWu9"
    },
    "source": [
-    "**Display a single discrete variable**"
+    "**Display a single categorical variable**"
    ]
   },
   {
@@ -637,7 +649,7 @@
     "id": "DqC3QB5ODWvE"
    },
    "source": [
-    "**Compare two discrete variables**"
+    "**Compare two categorical variables**"
    ]
   },
   {
@@ -717,7 +729,7 @@
     }
    ],
    "source": [
-    "# Compare two discrete variables using crosstab\n"
+    "# Compare two categorical variables using crosstab\n"
    ]
   },
   {
@@ -849,7 +861,7 @@
     }
    ],
    "source": [
-    "# make a stacked bar chart, for easy comparison of two discrete variables.\n"
+    "# make a stacked bar chart, for easy comparison of two categorical variables.\n"
    ]
   },
   {
@@ -959,7 +971,7 @@
     }
    ],
    "source": [
-    "# A paired barchart for comparison of two discrete variables. Note the use of 'barh'.\n"
+    "# A paired barchart for comparison of two categorical variables. Note the use of 'barh'.\n"
    ]
   },
   {
@@ -969,7 +981,7 @@
     "id": "pzOHGieGDWvt"
    },
    "source": [
-    "**Compare a discrete and continuous variable**"
+    "**Compare a categorical and continuous variable**"
    ]
   },
   {
@@ -1029,7 +1041,7 @@
     }
    ],
    "source": [
-    "# Now explore that continuous variable broken out by a categorical (i.e., discrete) variable.\n"
+    "# Now explore that continuous variable broken out by a categorical (i.e., categorical) variable.\n"
    ]
   },
   {
@@ -1151,7 +1163,7 @@
     }
    ],
    "source": [
-    "# Three variables: age, fare, and cabin class (color can be either continuous or discrete here).\n"
+    "# Three variables: age, fare, and cabin class (color can be either continuous or categorical here).\n"
    ]
   },
   {
