--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Starter.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Starter.ipynb
@@ -31,41 +31,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tdFFCCC_fIjV",
-        "colab_type": "text"
-      },
-      "source": [
-        "this is a test "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2JOl3OY1fRkQ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "b322fbb4-8ceb-4000-c6d0-e9f993fbb69d"
-      },
-      "source": [
-        "print('hello world')"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "hello world\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "2CkckTc6-txA",
         "colab_type": "text"
       },
@@ -389,7 +354,10 @@
       },
       "source": [
         "# Keep on trying things until you get it. \n",
-        "# If you really mess things up you can always just restart your runtime\n"
+        "# If you really mess things up you can always just restart your runtime\n",
+        "column_headers = ['name', 'landmass', 'zone', 'area', 'population', 'language', 'religion', 'bars', 'stripes', 'colors', 'red', 'green',\n",
+        "                  'blue', 'gold', 'white', 'black', 'orange', 'mainhue', 'circles', 'crosses', 'saltires', 'quarters', 'sunstars', 'crescent',\n",
+        "                  'triangle', 'icon', 'animate', 'text', 'topleft', 'botright']"
       ],
       "execution_count": 0,
       "outputs": []
