--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Solutions.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Solutions.ipynb
@@ -1128,7 +1128,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# You can also use the manual upload GUI over on the left of your screen.\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()"
       ],
       "execution_count": 0,
       "outputs": []
