this is my message to you

--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
@@ -32,6 +32,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RvtQnXREqVx0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9232a7aa-7adc-4616-cd22-888158e4c50d"
+      },
+      "source": [
+        "# this is a comment\n",
+        "\n",
+        "print (4 + 3)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "156P6ndeKojO",
@@ -60,6 +87,7 @@
       },
       "source": [
         "# TODO your work here!\n",
+        "# this is a new comment\n",
         "# And note you should write comments, descriptions, and add new\n",
         "# code and text blocks as needed"
       ],
