Superman wears Chuck Norris pajamas!

--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
@@ -14,6 +14,32 @@
   },
   "cells": [
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m8BJfQ2pISpr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f63a5782-7405-40e2-b40d-90bf4275f4b2"
+      },
+      "source": [
+        "# this is my first commit!\n",
+        "print('hello Lambda School!')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello Lambda School!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -34,29 +60,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RvtQnXREqVx0",
+        "id": "ixvrxtC3IR70",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9232a7aa-7adc-4616-cd22-888158e4c50d"
+        "colab": {}
       },
       "source": [
-        "# this is a comment\n",
-        "\n",
-        "print (4 + 3)"
+        ""
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "7\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -91,7 +103,7 @@
         "# And note you should write comments, descriptions, and add new\n",
         "# code and text blocks as needed"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +131,7 @@
         "# And note you should write comments, descriptions, and add new\n",
         "# code and text blocks as needed"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +156,7 @@
       "source": [
         "# Your Code Here"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +182,7 @@
       "source": [
         "# Your Code Here"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +207,7 @@
       "source": [
         "# Your Code Here"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +261,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
