--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
@@ -17,7 +17,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "m8BJfQ2pISpr",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -28,7 +27,7 @@
         "# this is my first commit!\n",
         "print('hello Lambda School!')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40,9 +39,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello world!!\")"
+      ],
+      "metadata": {
+        "id": "3o5m4xXYHcUv",
+        "outputId": "518112dc-607c-4754-e2d0-9f9f5471e21b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world!!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "MSnsTgZLKO72"
       },
       "source": [
@@ -60,9 +81,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ixvrxtC3IR70",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ixvrxtC3IR70"
       },
       "source": [
         ""
@@ -73,8 +92,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "156P6ndeKojO",
-        "colab_type": "text"
+        "id": "156P6ndeKojO"
       },
       "source": [
         "## 1) Load a dataset from UCI (via its URL)\n",
@@ -93,9 +111,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NJdISe69ZT7E",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NJdISe69ZT7E"
       },
       "source": [
         "# TODO your work here!\n",
@@ -109,8 +125,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-gFnZR6iLLPY",
-        "colab_type": "text"
+        "id": "-gFnZR6iLLPY"
       },
       "source": [
         "## 2) Load a dataset from your local machine.\n",
@@ -122,9 +137,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qUmwX-ZoM9cq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qUmwX-ZoM9cq"
       },
       "source": [
         "# TODO your work here!\n",
@@ -137,8 +150,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mq_aQjxlM-u5",
-        "colab_type": "text"
+        "id": "mq_aQjxlM-u5"
       },
       "source": [
         "## 3) Make Crosstabs of the Categorical Variables\n",
@@ -149,9 +161,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9-n9-LTM-18p",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9-n9-LTM-18p"
       },
       "source": [
         "# Your Code Here"
@@ -162,8 +172,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OJ4t2IAk-6Vg",
-        "colab_type": "text"
+        "id": "OJ4t2IAk-6Vg"
       },
       "source": [
         "## 4) Explore the distributions of the variables of the dataset using:\n",
@@ -175,9 +184,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DhES5WmH_NFt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DhES5WmH_NFt"
       },
       "source": [
         "# Your Code Here"
@@ -188,8 +195,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LXXTzpgp_N0q",
-        "colab_type": "text"
+        "id": "LXXTzpgp_N0q"
       },
       "source": [
         "## 5) Create at least one visualization from a crosstab:\n",
@@ -200,9 +206,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kBQKXHUa_VxM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "kBQKXHUa_VxM"
       },
       "source": [
         "# Your Code Here"
@@ -213,8 +217,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MZCxTwKuReV9",
-        "colab_type": "text"
+        "id": "MZCxTwKuReV9"
       },
       "source": [
         "## Stretch Goals \n",
@@ -254,9 +257,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f4QP6--JBXNK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "f4QP6--JBXNK"
       },
       "source": [
         ""
